unpackaged/main/default/objects/Engineer_Pay_Requisition__c/Engineer_Pay_Requisition__c.object-meta.xml
<CustomObject>
    <label>Engineer Pay Requisition</label>
    <nameField>
        <displayFormat>EPR-{000000}</displayFormat>
        <label>Engineer Pay Requisition  Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engineer Pay Requisitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>