unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Auto_Generated__c.field-meta.xml
<CustomField>
    <fullName>Auto_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by a process rather than by a person:
ApexClass	job_InvoiceGenerationController
ApexTrigger	erp_create_edit_delete_trigger</description>
    <inlineHelpText>Created by a process rather than by a person</inlineHelpText>
    <label>Auto Generated</label>
    <type>Checkbox</type>
</CustomField>