unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Chargeable_Units_R2__c.field-meta.xml
<CustomField>
    <fullName>Chargeable_Units_R2__c</fullName>
    <label>Chargeable Units R2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>