unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Client_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Full_Name__c</fullName>
    <formula>Job__r.Job_Raised_by__r.FirstName&amp;&quot; &quot;&amp;
 Job__r.Job_Raised_by__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Full Name</label>
    <type>Text</type>
</CustomField>