unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Customer_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Customer_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Invoice</label>
    <referenceTo>Customer_Invoice__c</referenceTo>
    <relationshipLabel>Engineer Pay Requisitions</relationshipLabel>
    <relationshipName>Engineer_Pay_Requisitions</relationshipName>
    <type>Lookup</type>
</CustomField>