unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Email_Pay_Processed__c.field-meta.xml
<CustomField>
    <fullName>Email_Pay_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marked true when email sent</description>
    <inlineHelpText>Marked true when email sent</inlineHelpText>
    <label>Email Pay Processed</label>
    <type>Checkbox</type>
</CustomField>