unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Engineer_Pay_Refund_Category__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Pay_Refund_Category__c</fullName>
    <label>Engineer Pay Refund Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fleet / Warehouse Refund</fullName>
            </value>
            <value>
                <fullName>IT Refund</fullName>
            </value>
            <value>
                <fullName>Vehicle Penalty Charge Refund</fullName>
            </value>
            <value>
                <fullName>Job Related Refund</fullName>
            </value>
            <value>
                <fullName>Pay Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>