unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Engineer_Pay_Refund_Type__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Pay_Refund_Type__c</fullName>
    <label>Engineer Pay Refund Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air Conditioning Labels</fullName>
            </value>
            <value>
                <fullName>Aspect Folder</fullName>
            </value>
            <value>
                <fullName>Aspect Purchase Order</fullName>
            </value>
            <value>
                <fullName>Bank Transfer Fee (for advance)</fullName>
            </value>
            <value>
                <fullName>Box Junction (PCN)</fullName>
            </value>
            <value>
                <fullName>Bus Lane (PCN)</fullName>
            </value>
            <value>
                <fullName>Call backs</fullName>
            </value>
            <value>
                <fullName>Cash Kept</fullName>
            </value>
            <value>
                <fullName>Cash Kept Admin Fee</fullName>
            </value>
            <value>
                <fullName>Congestion Charge (PCN)</fullName>
            </value>
            <value>
                <fullName>CRB deduction</fullName>
            </value>
            <value>
                <fullName>Dart Charge</fullName>
            </value>
            <value>
                <fullName>Dartford Charge (PCN)</fullName>
            </value>
            <value>
                <fullName>Gas Safe Register Deduction</fullName>
            </value>
            <value>
                <fullName>ID Card</fullName>
            </value>
            <value>
                <fullName>IT Deduction - Other</fullName>
            </value>
            <value>
                <fullName>Job Deduction - Other</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Laptop Charger</fullName>
            </value>
            <value>
                <fullName>Materials</fullName>
            </value>
            <value>
                <fullName>Mobile Bill</fullName>
            </value>
            <value>
                <fullName>Mobile Phone</fullName>
            </value>
            <value>
                <fullName>Mobile Phone Car Charger</fullName>
            </value>
            <value>
                <fullName>Mobile Phone Case</fullName>
            </value>
            <value>
                <fullName>Mobile Phone Charger</fullName>
            </value>
            <value>
                <fullName>Mobile Phone Hands Free</fullName>
            </value>
            <value>
                <fullName>Negative Pay Balance (From Previous Month)</fullName>
            </value>
            <value>
                <fullName>No Entry (PCN)</fullName>
            </value>
            <value>
                <fullName>No Turn (PCN)</fullName>
            </value>
            <value>
                <fullName>Overpaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>