unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Flagged__c.field-meta.xml
<CustomField>
    <fullName>Flagged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field was created on Alex B&#39;s request to gather the inforamtion on the wrong Rate of Pay</description>
    <label>Flagged</label>
    <type>Checkbox</type>
</CustomField>