unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Has_Batch_Created_EPR__c.field-meta.xml
<CustomField>
    <fullName>Has_Batch_Created_EPR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Batch Created EPR</label>
    <type>Checkbox</type>
</CustomField>