unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Has_Batch_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Has_Batch_Update_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Batch Update Date</label>
    <type>Checkbox</type>
</CustomField>