unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Has_Batch_Updated_Email__c.field-meta.xml
<CustomField>
    <fullName>Has_Batch_Updated_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Batch Updated Email</label>
    <type>Checkbox</type>
</CustomField>