unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Has_Run_Batch_Status__c.field-meta.xml
<CustomField>
    <fullName>Has_Run_Batch_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Run Batch Status</label>
    <type>Checkbox</type>
</CustomField>