unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Invoice_Balance__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Balance__c</fullName>
    <description>Balance Outstanding from the Customer Invoice</description>
    <formula>Customer_Invoice__r.Balance_Outstanding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Balance Outstanding from the Customer Invoice</inlineHelpText>
    <label>Invoice Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>