unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Invoice_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Created_Date__c</fullName>
    <formula>Customer_Invoice__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Created Date</label>
    <type>DateTime</type>
</CustomField>