unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Is_Project_Job__c.field-meta.xml
<CustomField>
    <fullName>Is_Project_Job__c</fullName>
    <formula>Job__r.is_Project__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Project Job</label>
    <type>Checkbox</type>
</CustomField>