unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Engineer Pay Requisitions</relationshipLabel>
    <relationshipName>Engineer_Pay_Requisitions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>