unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Key_Account_Admin_Approved__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Admin_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to track manual approvals for August month - only to be used by System Admin for tracking</description>
    <inlineHelpText>Field to track manual approvals for August month - only to be used by System Admin for tracking</inlineHelpText>
    <label>Key_Account_Admin_Approved</label>
    <type>Checkbox</type>
</CustomField>