unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Pay_Excluding_Materials__c.field-meta.xml
<CustomField>
    <fullName>Pay_Excluding_Materials__c</fullName>
    <formula>Pay_Fixed_Price__c + Pay_Labour_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pay Excluding Materials</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>