unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Pay_Fixed_Price__c.field-meta.xml
<CustomField>
    <fullName>Pay_Fixed_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pay Other</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>