unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Pay_Labour_R1__c.field-meta.xml
<CustomField>
    <fullName>Pay_Labour_R1__c</fullName>
    <formula>( Chargeable_Units_R1__c * Rate_of_Charge_R1__c ) * Rate_of_Pay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pay Labour R1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>