unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Pay_Labour_R3__c.field-meta.xml
<CustomField>
    <fullName>Pay_Labour_R3__c</fullName>
    <formula>( Chargeable_Units_R3__c * Rate_of_Charge_R3__c ) * Rate_of_Pay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pay Labour R3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>