unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Pay_Labour_Total__c.field-meta.xml
<CustomField>
    <fullName>Pay_Labour_Total__c</fullName>
    <formula>Pay_Labour_R1__c + Pay_Labour_R2__c + Pay_Labour_R3__c - Discount_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pay Labour Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>