unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Pay_Lead_Fee__c.field-meta.xml
<CustomField>
    <fullName>Pay_Lead_Fee__c</fullName>
    <label>Pay Lead Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>