unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Pay_Materials__c.field-meta.xml
<CustomField>
    <fullName>Pay_Materials__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pay Materials</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>