unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Pay_Total__c.field-meta.xml
<CustomField>
    <fullName>Pay_Total__c</fullName>
    <formula>Pay_Labour_Total__c +  Pay_Materials__c +  Pay_Fixed_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pay Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>