unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Pay_Total_Copy__c.field-meta.xml
<CustomField>
    <fullName>Pay_Total_Copy__c</fullName>
    <description>Alex requested a copy of &#39;Pay Total&#39; so we could have it next to &#39;Rate of Pay&#39; field</description>
    <formula>Pay_Labour_Total__c + Pay_Materials__c + Pay_Fixed_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pay Labour total + Pay Materials + Pay Fixed Price</inlineHelpText>
    <label>Pay Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>