unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Payroll_month__c.field-meta.xml
<CustomField>
    <fullName>Payroll_month__c</fullName>
    <label>Payroll month</label>
    <type>Date</type>
</CustomField>