unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Payroll_Reference__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Reference__c</fullName>
    <formula>IF(
 ISNULL(Payroll_month__c),
 &quot;&quot;, 
 RIGHT(TEXT(YEAR(Payroll_month__c)),2)  &amp;&quot;/&quot;&amp; LPAD(TEXT(MONTH(Payroll_month__c)),2,&quot;0&quot;)  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payroll Reference</label>
    <type>Text</type>
</CustomField>