unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Rate_of_Charge_R2__c.field-meta.xml
<CustomField>
    <fullName>Rate_of_Charge_R2__c</fullName>
    <label>Rate of Charge R2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>