unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Rate_of_Pay__c.field-meta.xml
<CustomField>
    <fullName>Rate_of_Pay__c</fullName>
    <label>Rate of Pay</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>