unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Rate_of_Pay_Tier__c.field-meta.xml
<CustomField>
    <fullName>Rate_of_Pay_Tier__c</fullName>
    <formula>Text(Service_Resource__r.Rate_of_Pay_Tier__c)</formula>
    <inlineHelpText>This field reflects current tier of pay value of the Engineer</inlineHelpText>
    <label>Current Rate of Pay Tier</label>
    <type>Text</type>
</CustomField>