unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/rcs_label__c.field-meta.xml
<CustomField>
    <fullName>rcs_label__c</fullName>
    <formula>Name &amp;&quot; - £&quot;&amp;  TEXT(Pay_Total__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>rcs_label</label>
    <type>Text</type>
</CustomField>