unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Reward_or_Refund__c.field-meta.xml
<CustomField>
    <fullName>Reward_or_Refund__c</fullName>
    <label>Reward or Refund</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engineer Pay Refunds</fullName>
            </value>
            <value>
                <fullName>TrustPilot Reviews</fullName>
            </value>
            <value>
                <fullName>Reactive Referral Bonus</fullName>
            </value>
            <value>
                <fullName>Fixed Price Bonus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>