unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Scheduled_Arrival_Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Arrival_Time_Slot__c</fullName>
    <formula>Work_Order__r.Arrival_Window__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Arrival Time Slot</label>
    <type>Text</type>
</CustomField>