unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date__c</fullName>
    <formula>Work_Order__r.Requested_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Date</label>
    <type>Date</type>
</CustomField>