unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Scheduled_Trade__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Trade__c</fullName>
    <formula>Work_Order__r.Trade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Trade</label>
    <type>Text</type>
</CustomField>