unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Scheduled_Trade_Group__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Trade_Group__c</fullName>
    <formula>IF( OR( Scheduled_Trade__c = &#39;Electrical&#39; ,Scheduled_Trade__c = &#39;Air Con, Ventilation &amp; Refrigeration&#39; ),
&quot;Electrical/HVAC&quot;,
IF( Scheduled_Trade__c= &quot;Leak Detection&quot;,
&quot;Leak Detection&quot;,
IF( OR(Scheduled_Trade__c = &quot;Drainage (Soil Water)&quot;,
Scheduled_Trade__c = &quot;Drainage (Wastewater)&quot;,
Scheduled_Trade__c = &quot;Heating &amp; Hot Water (Commercial)&quot;,
Scheduled_Trade__c = &quot;Heating &amp; Hot Water (Domestic)&quot;,
Scheduled_Trade__c = &quot;Plumbing &amp; Cold Water&quot;)
,

&quot;Gas/Plumbing/Drainage&quot; ,
&quot;Roofing/Multiskilled&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Trade Group</label>
    <type>Text</type>
</CustomField>