unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Service_Resource_Email__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource_Email__c</fullName>
    <label>Service Resource Email</label>
    <type>Email</type>
</CustomField>