unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Service_Resource_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource_First_Name__c</fullName>
    <formula>Service_Resource__r.FirstName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Resource First Name</label>
    <type>Text</type>
</CustomField>