unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Service_Resource_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource_Id__c</fullName>
    <formula>Service_Resource__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Resource Id</label>
    <type>Text</type>
</CustomField>