unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Site_Address__c</fullName>
    <formula>Job__r.Site__r.Site_Street__c &amp;&quot; &quot;&amp;BR()&amp;
Job__r.Site__r.Site_City__c &amp;&quot; &quot;&amp;BR()&amp;
IF(ISBLANK(Job__r.Site__r.Site_State__c),&quot;&quot;,Job__r.Site__r.Site_State__c &amp;&quot; &quot;&amp;BR())&amp;
Job__r.Site__r.Site_PostalCode__c &amp;&quot; &quot;&amp;BR()&amp;
Job__r.Site__r.Site_Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Address</label>
    <type>Text</type>
</CustomField>