unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/SR_Trade_Category__c.field-meta.xml
<CustomField>
    <fullName>SR_Trade_Category__c</fullName>
    <formula>TEXT(Service_Resource__r.Trade_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SR Trade Category</label>
    <type>Text</type>
</CustomField>