unpackaged/main/default/objects/Engineer_Pay_Requisition__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Engineer Pay Requisitions</relationshipLabel>
    <relationshipName>Engineer_Pay_Requisitions</relationshipName>
    <type>Lookup</type>
</CustomField>