unpackaged/main/default/objects/Engineer_Pay_Requisition__c/validationRules/Check_Status_User_Profile_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Status_User_Profile_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c , &quot;New&quot; ),
ISPICKVAL(PRIORVALUE(Status__c),&quot;Approved&quot;) ,
$Profile.Id = $CustomMetadata.PHASE_2_Profile_IDs__mdt.PHASE_2_Credit_Control.X15_Char_Profile_ID__c,
$Profile.Id = $CustomMetadata.PHASE_2_Profile_IDs__mdt.PHASE_2_Credit_Control_Manager.X15_Char_Profile_ID__c,
$Profile.Id&lt;&gt;$CustomMetadata.PHASE_2_Profile_IDs__mdt.System_Administrator.X15_Char_Profile_ID__c,
$Profile.Id = $CustomMetadata.PHASE_2_Profile_IDs__mdt.PHASE_2_Manager_Key_Accounts.X15_Char_Profile_ID__c ,
Pay_Total__c != 0
)</errorConditionFormula>
    <errorMessage>Only Users with a Profile of either &#39;Manager - Process&#39; or &#39;Ops - Processing&#39; can set an Engineer Pay Requisition to a Status of &#39;Approved&#39;</errorMessage>
</ValidationRule>