unpackaged/main/default/objects/Engineer_Pay_Requisition__c/validationRules/Check_Status_User_Profile_Paid.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Status_User_Profile_Paid</fullName>
    <active>true</active>
    <description>Only Users with a Profile of System Administrator and PHASE 2 Manager Key Accounts can set an Engineer Pay Requisition to a Status of &#39;Paid&#39;.</description>
    <errorConditionFormula>AND
(
TEXT(Status__c)=&#39;Paid&#39;,
$Profile.Id&lt;&gt;$CustomMetadata.PHASE_2_Profile_IDs__mdt.System_Administrator.X15_Char_Profile_ID__c,
$Profile.Id &lt;&gt; $CustomMetadata.PHASE_2_Profile_IDs__mdt.PHASE_2_Credit_Control_Manager.X15_Char_Profile_ID__c,
$Profile.Id&lt;&gt; $CustomMetadata.PHASE_2_Profile_IDs__mdt.PHASE_2_Manager_Key_Accounts.X15_Char_Profile_ID__c
)</errorConditionFormula>
    <errorMessage>Only Users with a Profile of System Administrator and PHASE 2 Manager Key Accounts can set an Engineer Pay Requisition to a Status of &#39;Paid&#39;.</errorMessage>
</ValidationRule>