unpackaged/main/default/objects/Engineer_Pay_Requisition__c/validationRules/Check_Status_User_Profile_Processed.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Status_User_Profile_Processed</fullName>
    <active>true</active>
    <description>Only Users with a Profile of System Administrator or Katalin Kallai can set an Engineer Pay Requisition to a Status of &#39;Processed&#39;.</description>
    <errorConditionFormula>AND
(
TEXT(Status__c)=&#39;Processed&#39;,
ISCHANGED(Status__c) ,
$Profile.Id&lt;&gt;$CustomMetadata.PHASE_2_Profile_IDs__mdt.System_Administrator.X15_Char_Profile_ID__c,
$User.Id&lt;&gt;$CustomMetadata.PHASE_2_Profile_IDs__mdt.Katalin_Kallai_User_ID.X15_Char_Profile_ID__c,
$User.Id&lt;&gt;$CustomMetadata.PHASE_2_Profile_IDs__mdt.DeleneDeHaas.X15_Char_Profile_ID__c 
)</errorConditionFormula>
    <errorMessage>Only Users with a Profile of System Administrator, Katalin Kallai, or Delene De Haas can set an Engineer Pay Requisition to a Status of &#39;Processed&#39;</errorMessage>
</ValidationRule>