unpackaged/main/default/objects/Engineer_Pay_Requisition__c/validationRules/Pate_of_pay_max_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Pate_of_pay_max_100</fullName>
    <active>true</active>
    <errorConditionFormula>Rate_of_Pay__c &gt; 1</errorConditionFormula>
    <errorMessage>Rate of Pay cannot exceed 100%</errorMessage>
</ValidationRule>