unpackaged/main/default/objects/Engineer_Pay_Requisition__c/listViews/ALL_EPRs_April.listView-meta.xml
<ListView>
    <fullName>ALL_EPRs_April</fullName>
    <columns>Client_Full_Name__c</columns>
    <columns>NAME</columns>
    <columns>Pay_Materials__c</columns>
    <columns>Pay_Labour_Total__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Job_Type__c</columns>
    <columns>Job__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account_Type__c</columns>
    <columns>Scheduled_Trade__c</columns>
    <columns>Rate_of_Pay__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>4/1/2022 12:00 AM</value>
    </filters>
    <label>ALL EPRs April</label>
</ListView>